feat(bff): statistic client swag
