# docs/v1/swagger.yaml
@@ -3337,39 +3337,42 @@ definitions:
     properties:
       activeClient:
         allOf:
-        - $ref: '#/definitions/response.ClientOverviewItem'
+        - $ref: '#/definitions/response.StatisticOverviewItem'
         description: 活跃客户端
       additionClient:
         allOf:
-        - $ref: '#/definitions/response.ClientOverviewItem'
+        - $ref: '#/definitions/response.StatisticOverviewItem'
         description: 新增客户端
-    type: object
-  response.ClientOverviewItem:
-    properties:
-      periodOverPeriod:
-        description: 环比上周期百分比
-        type: number
-      value:
-        description: 数量
-        type: number
+      browse:
+        allOf:
+        - $ref: '#/definitions/response.StatisticOverviewItem'
+        description: 浏览量
+      cumulativeClient:
+        allOf:
+        - $ref: '#/definitions/response.StatisticOverviewItem'
+        description: 累计客户端
     type: object
   response.ClientStatistic:
     properties:
       overview:
         allOf:
         - $ref: '#/definitions/response.ClientOverView'
-        description: 客户端统计面板
+        description: 统计面板
       trend:
         allOf:
-        - $ref: '#/definitions/response.ClientTrends'
-        description: 客户端统计趋势
+        - $ref: '#/definitions/response.ClientTrend'
+        description: 统计趋势
     type: object
-  response.ClientTrends:
+  response.ClientTrend:
     properties:
+      browse:
+        allOf:
+        - $ref: '#/definitions/response.StatisticChart'
+        description: 浏览量
       client:
         allOf:
         - $ref: '#/definitions/response.StatisticChart'
-        description: 客户端活跃数据
+        description: 客户端
     type: object
   response.ConversationCreateResp:
     properties:
@@ -4829,6 +4832,15 @@ definitions:
       value:
         type: number
     type: object
+  response.StatisticOverviewItem:
+    properties:
+      periodOverPeriod:
+        description: 环比上周期百分比
+        type: number
+      value:
+        description: 数量
+        type: number
+    type: object
   response.ToolAction4Workflow:
     properties:
       actionId:
@@ -5098,17 +5110,6 @@ definitions:
         description: 视觉配置图片数量
         type: integer
     type: object
-  response.WorkflowStatistic:
-    properties:
-      overview:
-        allOf:
-        - $ref: '#/definitions/response.WorkflowTemplateOverView'
-        description: 工作流模板统计面板
-      trend:
-        allOf:
-        - $ref: '#/definitions/response.WorkflowTemplateTrends'
-        description: 工作流模板统计趋势
-    type: object
   response.WorkflowTemplateDetail:
     properties:
       author:
@@ -5170,29 +5171,6 @@ definitions:
       templateId:
         description: 模板ID
         type: string
-    type: object
-  response.WorkflowTemplateOverView:
-    properties:
-      browse:
-        allOf:
-        - $ref: '#/definitions/response.WorkflowTemplateOverviewItem'
-        description: 工作流模板浏览数据总览
-    type: object
-  response.WorkflowTemplateOverviewItem:
-    properties:
-      periodOverPeriod:
-        description: 环比上周期百分比
-        type: number
-      value:
-        description: 数量
-        type: number
-    type: object
-  response.WorkflowTemplateTrends:
-    properties:
-      browse:
-        allOf:
-        - $ref: '#/definitions/response.StatisticChart'
-        description: 工作流模板浏览数据趋势
     type: object
   response.WorkflowTemplateURL:
     properties:
@@ -6761,67 +6739,6 @@ paths:
       summary: 邮箱注册验证码发送
       tags:
       - guest
-  /client/statistic:
-    get:
-      consumes:
-      - application/json
-      description: 获取使用工作流模板用户统计
-      parameters:
-      - description: 开始时间（格式yyyy-mm-dd）
-        in: query
-        name: startDate
-        required: true
-        type: string
-      - description: 结束时间（格式yyyy-mm-dd）
-        in: query
-        name: endDate
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/response.ClientStatistic'
-              type: object
-      security:
-      - JWT: []
-      summary: 获取使用工作流模板用户统计
-      tags:
-      - common
-  /client/statistic/cumulative:
-    get:
-      consumes:
-      - application/json
-      description: 获取累计使用工作流模板用户统计
-      parameters:
-      - description: 时间戳
-        in: query
-        name: endAt
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/response.ClientStatistic'
-              type: object
-      security:
-      - JWT: []
-      summary: 获取累计使用工作流模板用户统计
-      tags:
-      - common
   /custom/home:
     post:
       consumes:
@@ -10133,6 +10050,39 @@ paths:
       summary: 获取词表数据列表
       tags:
       - safety
+  /statistic/client:
+    get:
+      consumes:
+      - application/json
+      description: 获取客户端统计数据
+      parameters:
+      - description: 开始时间（格式yyyy-mm-dd）
+        in: query
+        name: startDate
+        required: true
+        type: string
+      - description: 结束时间（格式yyyy-mm-dd）
+        in: query
+        name: endDate
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/response.ClientStatistic'
+              type: object
+      security:
+      - JWT: []
+      summary: 获取客户端统计数据
+      tags:
+      - statistic_client
   /tool/action/detail:
     get:
       consumes:
@@ -10983,39 +10933,6 @@ paths:
       summary: 获取工作流模板推荐
       tags:
       - guest
-  /workflow/template/statistic:
-    get:
-      consumes:
-      - application/json
-      description: 获取工作流模板统计
-      parameters:
-      - description: 开始时间（格式yyyy-mm-dd）
-        in: query
-        name: startDate
-        required: true
-        type: string
-      - description: 结束时间（格式yyyy-mm-dd）
-        in: query
-        name: endDate
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/response.WorkflowStatistic'
-              type: object
-      security:
-      - JWT: []
-      summary: 获取工作流模板统计
-      tags:
-      - common
   /workflow/tool/action:
     get:
       consumes:
